# py-tonic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test.sh
proto/: hw.proto  hw.rs
python/: compile-proto.sh  main.py  requirements.txt
python/app/: event.py
python/engine/: steps.py
python/greeter/: hw.py  hw_pb2.py  say_hello.py  say_hello_pyonly.py
src/: client.rs  event.rs  lib.rs  model.rs  server.rs  test.rs
src/service/: hw.rs  mod.rs  model.rs
