[package]
name = "py-tonic"
version = "0.1.0"
authors = ["Leo Smerling <leosmerling@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_tonic"
crate-type = ["cdylib"]

[[bin]] # Bin to run the HelloWorld gRPC client
name = "test-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4.1"
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
metered = "0.8.0"
serde = "1.0.125"
serde_yaml = "0.8.17"
log = "0.4.14"
env_logger = "0.8.3"

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize", "extension-module"]

[dependencies.pyo3-asyncio]
version = "0.13.2"
features = ["attributes", "tokio-runtime"]

[build-dependencies]
tonic-build = "0.4.1"
