[package]
name = "py-tonic"
version = "0.2.0"
authors = ["Leo Smerling <leosmerling@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_tonic"
crate-type = ["cdylib"]

[[bin]]
name = "service"
path = "src/service/mod.rs"

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "time"] }
metered = "*"
serde = "*"
serde_yaml = "*"
log = "*"
env_logger = "*"
pyo3 = { version = "0.14.5", features = ["auto-initialize"] } #, "extension-module"] }
pyo3-prost = "0.2.0"
simple-process-stats = "1.0.0"
rand = "*"

[build-dependencies]
tonic-build = "*"

# [features]
# extension-module = ["pyo3/extension-module"]
# default = ["extension-module"]
